[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/pizza.png" type="Texture" id=1]
[ext_resource path="res://src/zones/eat/EatZone.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.321569, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="EatZone" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, 5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="CountLabel" type="RichTextLabel" parent="."]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 48.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_right = 48.0
margin_bottom = 8.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_EatZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EatZone_body_exited"]
